--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,167 @@
-body {
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.flex{
+  display: flex;
 }
+
+.column{
+  flex-direction: column;
+}
+
+.row{
+  flex-direction: row;
+}
+
+.grow{
+  flex-grow: 1;
+}
+
+.wrap{
+  flex-wrap: wrap;
+}
+
+.center{
+  align-items: center;
+  justify-content: center;
+}
+
+.justify-center{
+  justify-content: center;
+}
+
+.align-center{
+  align-items: center;
+}
+
+.justify-between{
+  justify-content: space-between;
+}
+
+.justify-evenly{
+  justify-content:evenly;
+}
+.w100{
+  width: 100%;
+}
+
+.h90{
+  min-height:90vh;
+}
+
+.nav-bar{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #eaf2f4;
+}
+
+li{
+  list-style-type: none;
+}
+
+.main {
+  width: 100%;
+  height: 90vh;
+  background-image: url(./img/image-back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.link{
+  text-decoration: none;
+}
+
+.b-black {
+  background-color: #eaf2f4;
+  color: #1f6e6b;
+
+}
+
+.glassform {
+  display: flex;
+  font-size: x-large;
+  padding: 2rem;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50%
+}
+.green{
+  color: #2b4a4c;
+}
+
+.btn {
+  font-weight: bold;
+  font-size: x-large;
+  padding: 0.5rem;
+  margin-right: 1rem;
+  text-decoration: none;
+  gap: 2rem;
+  color: #1f6e6b;
+  
+}
+.btn:hover {
+  border-radius: 1.5rem 0;
+  /* gap: 2rem; */
+  color: #eaf2f4;
+  padding: 0 1rem;
+  background-color: #1f6e6b;
+}
+
+/* header {
+  height: 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #eaf2f4;
+}
+a {
+  color: rgb(0, 0, 0);
+}
+
+
+.caja {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.glassform {
+  display: flex;
+  font-size: x-large;
+  padding: 2rem;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(1.5px);
+  flex-direction: column;
+  align-items: center;
+}
+.btn {
+  font-weight: bold;
+  font-size: x-large;
+  padding: 0.5rem;
+  margin-right: 1rem;
+  text-decoration: none;
+}
+.btn:hover {
+  border-radius: 1.5rem 0;
+  gap: 2rem;
+  color: rgb(0, 0, 0);
+  padding: 0 2rem;
+  background-color: rgb(54, 210, 179);
+} */
