--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -6,55 +6,55 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.column{
+.column {
   flex-direction: column;
 }
 
-.row{
+.row {
   flex-direction: row;
 }
 
-.grow{
+.grow {
   flex-grow: 1;
 }
 
-.wrap{
+.wrap {
   flex-wrap: wrap;
 }
 
-.center{
+.center {
   align-items: center;
   justify-content: center;
 }
 
-.justify-center{
+.justify-center {
   justify-content: center;
 }
 
-.align-center{
+.align-center {
   align-items: center;
 }
 
-.justify-between{
+.justify-between {
   justify-content: space-between;
 }
 
-.justify-evenly{
-  justify-content:evenly;
+.justify-evenly {
+  justify-content: evenly;
 }
-.w100{
+.w100 {
   width: 100%;
 }
 
-.h90{
-  min-height:90vh;
+.h90 {
+  min-height: 90vh;
 }
 
-.nav-bar{
+.nav-bar {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -63,43 +63,51 @@
   background-color: #eaf2f4;
 }
 
-li{
+li {
   list-style-type: none;
 }
 
 .main {
   width: 100%;
-  height: 90vh;
+  min-height: 90vh;
   background-image: url(./img/image-back.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-.link{
+.link {
   text-decoration: none;
 }
 
 .b-black {
   background-color: #eaf2f4;
   color: #1f6e6b;
-
+}
+.cajaglass {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15rem;
 }
 
 .glassform {
   display: flex;
   font-size: x-large;
+  gap: 0.5rem;
   padding: 2rem;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.3);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(1.5px);
+  backdrop-filter: blur(1px);
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 50%
+  height: 50%;
+  width: 35%;
 }
-.green{
+.green {
   color: #2b4a4c;
 }
 
@@ -111,7 +119,6 @@ li{
   text-decoration: none;
   gap: 2rem;
   color: #1f6e6b;
-  
 }
 .btn:hover {
   border-radius: 1.5rem 0;
@@ -120,48 +127,35 @@ li{
   padding: 0 1rem;
   background-color: #1f6e6b;
 }
+.h3 {
+  text-align: center;
+}
 
-/* header {
-  height: 5rem;
+.footer {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
+  height: 10vh;
   background-color: #eaf2f4;
 }
-a {
-  color: rgb(0, 0, 0);
-}
-
-
-.caja {
-  height: 100%;
+.git {
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.glassform {
-  display: flex;
-  font-size: x-large;
-  padding: 2rem;
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.3);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-  backdrop-filter: blur(1.5px);
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
-.btn {
-  font-weight: bold;
-  font-size: x-large;
-  padding: 0.5rem;
-  margin-right: 1rem;
+a {
   text-decoration: none;
+  text-decoration: none;
+  color: #1f6e6b;
+  font-weight: bold;
 }
-.btn:hover {
-  border-radius: 1.5rem 0;
-  gap: 2rem;
-  color: rgb(0, 0, 0);
-  padding: 0 2rem;
-  background-color: rgb(54, 210, 179);
-} */
+.toUp {
+  background-color: #1f6e6b;
+  color: white;
+  height: 50px;
+  width: 54px;
+  border-radius: 10px;
+  font-weight: bolder;
+}
