--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,13 @@
   min-height: 90vh;
 }
 
+.container-layout {
+  background-image: url(./img/image-back.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 .nav-bar {
   width: 100%;
   display: flex;
@@ -67,13 +74,14 @@ li {
   list-style-type: none;
 }
 
+.home1{
+  width: 100%;
+  min-height: 100vh;
+}
+
 .main {
   width: 100%;
-  min-height: 90vh;
-  background-image: url(./img/image-back.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  min-height: 100vh;
 }
 
 .link {
@@ -89,7 +97,7 @@ li {
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  margin-top: 15rem;
+  padding-top: 15rem;
 }
 
 .glassform {
