--- a/src/carousel.css
+++ b/src/carousel.css
@@ -46,3 +46,15 @@ h2 {
   margin: 1rem;
   border-radius: 2rem;
 }
+
+@media screen and (max-width: 878px) {
+  .btn-carousel {
+    font-size: 1rem;
+    background-color: #1f6e6b;
+    color: #eaf2f4;
+    border: 0px solid #1f6e6b;
+    border-radius: 1rem;
+    height: 5rem;
+    padding: 0.5rem;
+  }
+}
