--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,10 @@
 li {
   list-style-type: none;
 }
-
+.nav1 {
+  display: flex;
+  gap: 2rem;
+}
 .home1 {
   width: 100%;
   min-height: 100vh;
@@ -125,14 +128,15 @@ li {
   padding: 0.5rem;
   margin-right: 1rem;
   text-decoration: none;
-  gap: 2rem;
+  border: #1f6e6b;
   color: #1f6e6b;
+  border-radius: 1.5rem 0;
 }
 .btn:hover {
   border-radius: 1.5rem 0;
   /* gap: 2rem; */
   color: #eaf2f4;
-  padding: 0 1rem;
+  padding: 0.5rem;
   background-color: #1f6e6b;
 }
 .h3 {
@@ -214,4 +218,42 @@ a {
     height: 50%;
     width: 80%;
   }
+}
+.login {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.login img {
+  width: 48px;
+  cursor: pointer;
+}
+
+li {
+  color: white;
+}
+
+.datosLogin {
+  position: absolute;
+  top: 60px;
+  right: 30px;
+  flex-direction: column;
+  display: flex;
+  background-color: #1f6e6b;
+  color: #eaf2f4;
+  gap: 15px;
+  border-radius: 7px;
+  padding: 20px;
+  z-index: 1; /*lo usamospara que quede de chill*/
+}
+
+.datosLogin button {
+  background-color: rgb(32, 32, 32);
+  width: 150px;
+  border: none;
+  color: white;
+  justify-content: center;
+  cursor: pointer;
 }
