--- a/src/carousel.css
+++ b/src/carousel.css
@@ -1,11 +1,17 @@
+.carousel {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .btn-carousel {
-  font-size: 1rem;
-  background-color: #1f6e6b;
-  color: #eaf2f4;
+  font-size: 2rem;
+  background-color: #eaf2f4;
+  color: #1f6e6b;
   border: 2px solid #1f6e6b;
   border-radius: 2rem;
-  height: 10rem;
-  padding: 2rem;
+  height: 9rem;
+  padding: 1rem;
 }
 .btn-carousel {
   -webkit-transition-duration: 0.4s;
@@ -26,8 +32,8 @@
 }
 
 .photoCarrusel {
-  width: 13rem;
-  height: 13rem;
+  width: 20rem;
+  height: 18rem;
 }
 
 .general {
@@ -38,13 +44,14 @@
   justify-content: center;
   height: 80%;
   color: #eaf2f4;
-  padding-top: 4rem;
+  padding-top: 19rem;
 }
 h2 {
   background-color: #1f6e6b;
   text-align: center;
   margin: 1rem;
   border-radius: 2rem;
+  padding: 0.5;
 }
 
 @media screen and (max-width: 878px) {
@@ -56,5 +63,10 @@ h2 {
     border-radius: 1rem;
     height: 5rem;
     padding: 0.5rem;
+  }
+
+  .photoCarrusel {
+    width: 14rem;
+    height: 14rem;
   }
 }
