--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  min-height: 100vh;
 }
 
 .nav-bar {
@@ -79,7 +80,7 @@ li {
 }
 .home1 {
   width: 100%;
-  min-height: 100vh;
+  min-height: 85vh;
 }
 
 .main {
@@ -122,25 +123,73 @@ li {
   color: #2b4a4c;
 }
 
+.flex-menu > nav {
+  display: flex;
+  gap: 1rem;
+}
+
+.citi-hote {
+  display: flex;
+  gap: 0rem;
+}
+
+/*
 .btn {
   font-weight: bold;
-  font-size: x-large;
+  font-size: 2rem;
   padding: 0.5rem;
   margin-right: 1rem;
   text-decoration: none;
   border: #1f6e6b;
   color: #1f6e6b;
   border-radius: 1.5rem 0;
+  color: #eaf2f4;
+  padding: 0.5rem;
+  background-color: #1f6e6b;
+  margin: 1.5rem;
 }
 .btn:hover {
   border-radius: 1.5rem 0;
   /* gap: 2rem; */
-  color: #eaf2f4;
-  padding: 0.5rem;
-  background-color: #1f6e6b;
+/*color: #1f6e6b;
+  padding: 0.5rem;*/
+/*background-color: #eaf2f4;
+}*/
+.btn {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  margin: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
 }
+
+.btn:hover {
+  background-color: #23c483;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+}
+
 .h3 {
   text-align: center;
+  padding-bottom: 5rem;
+}
+
+.btn-fo {
+  color: #1f6e6b;
 }
 
 .footer {
@@ -149,7 +198,7 @@ li {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  height: 10vh;
+  height: 15vh;
   background-color: #eaf2f4;
 }
 .git {
