--- a/src/shows.css
+++ b/src/shows.css
@@ -12,7 +12,8 @@
   flex-wrap: wrap;
   height: 25rem;
   width: 28rem;
-  background-color: aqua;
+  color: #eaf2f4;
+  background-color: #1f6e6b;
   border-radius: 20px;
   box-shadow: 0 5px 10px #000;
 }
@@ -32,4 +33,13 @@
   height: 40%;
   width: 100%;
   text-align: center;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+}
+.h1 {
+  font-size: larger;
 }
