--- a/src/shows.css
+++ b/src/shows.css
@@ -10,7 +10,7 @@
 .mainShow {
   display: flex;
   flex-wrap: wrap;
-  height: 25rem;
+  height: 30rem;
   width: 28rem;
   color: #eaf2f4;
   background-color: #1f6e6b;
@@ -30,7 +30,7 @@
 }
 
 .divInfo {
-  height: 40%;
+  height: auto;
   width: 100%;
   text-align: center;
   padding: 1rem;
