--- a/src/carousel.css
+++ b/src/carousel.css
@@ -46,7 +46,7 @@
   color: #eaf2f4;
   padding-top: 19rem;
 }
-h2 {
+.citiesyhotels {
   background-color: #1f6e6b;
   text-align: center;
   margin: 1rem;
