--- a/src/card.css
+++ b/src/card.css
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  padding-top: 4rem;
+  padding-top: 2rem;
 }
 
 .contenedor-card {
@@ -28,10 +28,12 @@
   flex-wrap: wrap;
   gap: 1rem;
 }
-.check {
-  display: flex;
-  color: #eaf2f4;
-  background-color: #1f6e6b;
-  gap: 5px;
-  padding: 5px;
+  .check {
+    display: flex;
+    color: #eaf2f4;
+    background-color: #1f6e6b;
+    gap: 5px;
+    padding: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
