--- a/src/index.css
+++ b/src/index.css
@@ -67,9 +67,8 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-around;
-  background-color: #eaf2f4;
-}
+  justify-content: center;
+  background-color: #eaf2f4;}
 
 li {
   list-style-type: none;
@@ -131,6 +130,8 @@ li {
 .citi-hote {
   display: flex;
   gap: 0rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /*
@@ -305,4 +306,7 @@ li {
   color: white;
   justify-content: center;
   cursor: pointer;
+}
+.caja1{
+  margin-bottom: 2rem;
 }
