--- a/src/shows.css
+++ b/src/shows.css
@@ -1,17 +1,16 @@
 .divShow {
   display: flex;
-
   height: 40rem;
-  width: 100%;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
 }
 
 .mainShow {
   display: flex;
   flex-wrap: wrap;
-  height: 30rem;
-  width: 28rem;
+  height: 28rem;
+  width: 25rem;
   color: #eaf2f4;
   background-color: #1f6e6b;
   border-radius: 20px;
@@ -42,4 +41,15 @@
 }
 .h1 {
   font-size: larger;
+}
+
+
+
+@media screen and (max-width: 410px) {
+
+.mainShow{
+height: 25rem;
+width: 18rem;
+margin:.5rem;
+}
 }
