--- a/src/sign.css
+++ b/src/sign.css
@@ -92,6 +92,27 @@
     background-color: #1f6e6b;
     font-weight: bold;
   }
+
+  .submit1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem;
+    border: 2px solid #eaf2f4;
+    border-radius: 10px;
+    padding: 10px;
+    gap: 2rem;
+    background-color: #eaf2f4;
+    font-weight: bold;
+  }
+  .submit1:hover {
+    border: 2px solid #1f6e6b;
+    color: #eaf2f4;
+    border: 2px solid #eaf2f4;
+    background-color: #1f6e6b;
+    font-weight: bold;
+  }
   
   @media screen and (max-width: 900px) {
     .form-body {
