--- a/src/shows.css
+++ b/src/shows.css
@@ -67,3 +67,13 @@ margin:.5rem;
   box-shadow: 0 5px 10px #000;
   min-height: 41rem;
 }
+
+
+
+.divShow {
+  display: flex;
+  height: 40rem;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  padding-top: 2rem;}
