--- a/src/card2.css
+++ b/src/card2.css
@@ -43,7 +43,7 @@
   transform: perspective(600px) rotateY(180deg);
   background: #dde4e4;
   padding: 15px;
-  color: #1f6e6b;
+  color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
