--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 * {
   padding: 0;
   margin: 0;
@@ -27,8 +28,9 @@
 }
 
 .center {
-  align-items: center;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem;
 }
 
 .justify-center {
@@ -55,12 +57,18 @@
 }
 
 .container-layout {
-  background-image: url(./img/image-back.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 100vh;
+  
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: antiquewhite;
+    min-height: 77vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .nav-bar {
   width: 100%;
@@ -68,7 +76,11 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  background-color: #eaf2f4;}
+  background-color: #515151;}
+
+  .nav-bar a{
+    margin-left: 1rem;
+  }
 
 li {
   list-style-type: none;
@@ -77,14 +89,15 @@ li {
   display: flex;
   gap: 2rem;
 }
-.home1 {
-  width: 100%;
-  min-height: 85vh;
-}
 
 .main {
-  width: 100%;
-  min-height: 100vh;
+  background-color: antiquewhite;
+  object-fit:contain;
+  width: 90%;
+  min-height: 85vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .link {
@@ -94,13 +107,6 @@ li {
 .b-black {
   background-color: #eaf2f4;
   color: #1f6e6b;
-}
-.cajaglass {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 8rem;
 }
 
 .glassform {
@@ -115,8 +121,8 @@ li {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 50%;
-  width: 35%;
+  width: 100%;
+  margin-top: 5rem;
 }
 .green {
   color: #2b4a4c;
@@ -164,7 +170,7 @@ li {
   letter-spacing: 2.5px;
   font-weight: 500;
   color: #000;
-  background-color: #fff;
+  background-color: #ff841a;
   border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -174,9 +180,9 @@ li {
 }
 
 .btn:hover {
-  background-color: #23c483;
-  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-  color: #fff;
+  background-color:rgb(255, 255, 255);
+  box-shadow: 0px 10px 15px #dbd7d3;
+  color: rgb(0, 0, 0);
   transform: translateY(-7px);
 }
 
@@ -186,7 +192,8 @@ li {
 
 .h3 {
   text-align: center;
-  padding-bottom: 5rem;
+  padding: 0.5rem;
+  border-radius: 5px;
 }
 
 .btn-fo {
@@ -195,15 +202,12 @@ li {
 
 .footer {
   display: flex;
-
-
+  background-color: #515151;
   flex-direction: row;
-
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  height: 15vh;
-  background-color: #eaf2f4;
+   height: 15vh;
 }
 .git {
   display: flex;
@@ -277,6 +281,7 @@ a {
   align-items: end;
   flex-direction: column;
   flex-grow: 1;
+  margin-right: 1rem;
 }
 
 .login img {
@@ -294,7 +299,7 @@ li {
   right: 30px;
   flex-direction: column;
   display: flex;
-  background-color: #1f6e6b;
+  background-color: black;
   color: #eaf2f4;
   gap: 15px;
   border-radius: 7px;
@@ -303,7 +308,7 @@ li {
 }
 
 .datosLogin button {
-  background-color: rgb(32, 32, 32);
+  background-color:#ff841a;
   width: 150px;
   border: none;
   color: white;
@@ -496,15 +501,15 @@ li {
   margin-right: 10px;
 }
  .tinerary{
-  font-size: 10px;
+  font-size: 20px;
   font-weight: bold;
  }
 
 /*BTTNNNN VIEV*/
 .btn3:hover {
-  background-color: #23c483;
-  box-shadow: 0px 15px 20px rgb(46 229 157 / 40%);
-  color: #fff;
+  background-color: #ffffff;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+  color: rgb(0, 0, 0);
   transform: translateY(-7px);
 }
 .btn3 {
@@ -515,7 +520,7 @@ li {
   letter-spacing: 2.5px;
   font-weight: 500;
   color: #000;
-  background-color: #fff;
+  background-color:#ff841a;
   border: none;
   border-radius: 45px;
   box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
@@ -621,4 +626,168 @@ width: 30px;
 .deleteedit{
   display: flex;
     justify-content: space-evenly;
+}
+
+
+.bg-img-1{
+  width: 100%;
+  min-height: 90vh;
+  object-fit: cover;
+}
+
+.contenedor {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 2vh;
+  color: rgb(255, 255, 255);   
+  font-family: 'Rajdhani', sans-serif;
+  padding-top: 8rem;
+
+}
+
+h1{
+
+    border-radius: 6px;
+}
+.cajilla{
+  border-radius: 10px;
+  color: #000;
+}
+
+.tineraryy{
+  font-size: 4rem;
+}
+
+a{
+  color: #ff841a;
+}
+
+.glassform2{
+ 
+    display: flex;
+    font-size: x-large;
+    gap: 0.5rem;
+    padding: 2rem;
+    border-radius: 10px;
+    background-color: rgb(3 3 3);
+    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+    -webkit-backdrop-filter: blur(1px);
+    backdrop-filter: blur(1px);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    color: white;
+}
+
+
+@media screen and (max-width: 512px) {
+
+.datosLogin {
+
+  top: 116px;
+  right: 42px;
+ 
+}
+
+}
+@media screen and (max-width:448px) {
+
+  .datosLogin {
+
+    top: 131px;
+    right: 42px;
+ 
+  }
+  
+  }
+  @media screen and (max-width:421px) {
+
+    .datosLogin {
+  
+      top: 193px;
+      right: 42px;
+   
+    }
+    
+    }
+    @media screen and (max-width:357px) {
+
+      .datosLogin {
+    
+        top: 270px;
+    right: 50px;
+     
+      }
+      
+      }
+
+
+@media screen and (max-width: 800px) {
+.contenedor {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  top: 45%;
+  left: 59%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 2vh;
+  color: rgb(255, 255, 255);
+  font-family: 'Rajdhani', sans-serif;
+  padding-top: 8rem;
+}
+}
+
+
+.legal{
+  color: #ff841a;
+  font-weight: bold;
+margin: .5rem;
+
+} 
+.legal h4{
+  color:white;
+  padding: .5rem;
+  font-weight: bold;
+}
+
+.services{
+  color: #ff841a;
+  font-weight: bold;
+margin: .5rem;
+
+} 
+.services h4{
+  color:white;
+  padding: .5rem;
+  font-weight: bold;
+
+}
+
+.git{
+  color: #ff841a;
+  font-weight: bold;
+  margin: .5rem;
+
+} 
+.git h4{
+  color:white;
+  padding: .5rem;
+  font-weight: bold;
+}
+
+.git a{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.3rem;
 }
