--- a/src/shows.css
+++ b/src/shows.css
@@ -1,10 +1,12 @@
 .divShow {
-  display: flex;
-  height: 40rem;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
+    display: flex;
+    min-height: 50rem;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding-top: 2rem;
 }
+
 
 .mainShow {
   display: flex;
@@ -12,13 +14,25 @@
 height: 37rem;
   width: 25rem;
   color: #eaf2f4;
-  background-color: #1f6e6b;
+  background-color: #000000;
   border-radius: 20px;
-  box-shadow: 0 5px 10px #000;
+  box-shadow: 0 5px 10px #eaf2f4;
 }
 
+
+.mainShow2 {
+display: flex;
+    flex-wrap: wrap;
+    height: 37rem;
+    width: 25rem;
+    color: #eaf2f4;
+    background-color: #ff841a;
+    border-radius: 20px;
+    box-shadow: 0 5px 10px #eaf2f4;
+  }
+
 .imgshow {
-  height: 60%;
+  height: 50%;
   width: 100%;
   object-fit: contain;
 }
@@ -47,33 +61,24 @@ height: 37rem;
 
 @media screen and (max-width: 410px) {
 
-.mainShow{
-height: 25rem;
-width: 18rem;
-margin:.5rem;
-}
-}
-
-
-.mainShow {
-  display: flex;
-  flex-wrap: wrap;
-  /* min-width: 37rem; */
-  width: 25rem;
-  min-height: 29rem;
-  color: #eaf2f4;
-  background-color: #1f6e6b;
-  border-radius: 20px;
-  box-shadow: 0 5px 10px #000;
-  min-height: 41rem;
-}
-
 
 
 .divShow {
-  display: flex;
-  height: 40rem;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  padding-top: 2rem;}
+    display: flex;
+    height: 40rem;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding-top: 2rem;
+    width: 90%;
+}
+
+}
+
+
+
+
+
+
+
+
